@@ -1,4 +1,4 @@
-{set scope=global persistent_variable=hash('title', 'Anchor properties'|i18n('design/standard/ezoe'),
+{set scope=global persistent_variable=hash('title', 'New <%tag_name> tag'|i18n('design/standard/ezoe', '', hash( '%tag_name', $tag_name ))|wash('xhtml'),
                                            'scripts', array('javascript/ezoe/ez_core.js',
                                                             'javascript/ezoe/ez_core_animation.js',
                                                             'javascript/ezoe/ez_core_accordion.js',
@@ -15,6 +15,7 @@ tinyMCEPopup.onInit.add( ez.fn.bind( eZOEPopupUtils.init, window, {ldelim}
     cancelButton: 'CancelButton',
     customAttributeStyleMap: {$custom_attribute_style_map},
     cssClass: 'mceItemAnchor',
+    tagEditTitleText: "{'Edit <%tag_name> tag'|i18n('design/standard/ezoe', '', hash( '%tag_name', $tag_name ))|wash('xhtml')}",
 {literal}
     onInit: function( el, tag, ed )
     {
@@ -46,7 +47,7 @@ tinyMCEPopup.onInit.add( ez.fn.bind( eZOEPopupUtils.init, window, {ldelim}
 <div class="panel_wrapper">
     <div class="panel current">
         <div class="attribute-title">
-            <h2 style="padding: 0 0 4px 0;">{$tag_name|upfirst|wash}</h2>
+            <h2 style="padding: 0 0 4px 0;" id="tag-edit-title">{'New <%tag_name> tag'|i18n('design/standard/ezoe', '', hash( '%tag_name', $tag_name ))|wash('xhtml')}</h2>
         </div>
 
         {* Anchor attribute name is mapped to id internally to workaround a ie issue.. *}
