@@ -1,4 +1,4 @@
-{set scope=global persistent_variable=hash('title', 'Cell Properties'|i18n('design/standard/ezoe'),
+{set scope=global persistent_variable=hash('title', 'New <%tag_name> tag'|i18n('design/standard/ezoe', '', hash( '%tag_name', $tag_name ))|wash('xhtml'),
                                            'scripts', array('javascript/ezoe/ez_core.js',
                                                             'javascript/ezoe/ez_core_animation.js',
                                                             'javascript/ezoe/ez_core_accordion.js',
@@ -11,6 +11,7 @@
 
 var ezTagName = '{$tag_name|wash}', cellClassList = {$cell_class_list};
 eZOEPopupUtils.settings.customAttributeStyleMap = {$custom_attribute_style_map};
+eZOEPopupUtils.settings.tagEditTitleText = "{'Edit <%tag_name> tag'|i18n('design/standard/ezoe', '', hash( '%tag_name', $tag_name ))|wash('xhtml')}";
 {literal} 
 
 tinyMCEPopup.onInit.add( ez.fn.bind( eZOEPopupUtils.init, window, {
@@ -81,7 +82,7 @@ tinyMCEPopup.onInit.add( ez.fn.bind( eZOEPopupUtils.init, window, {
 <div class="panel_wrapper">
     <div class="panel current">
         <div class="attribute-title">
-            <h2 style="padding: 0 0 4px 0;">{$tag_name|upfirst|wash}</h2>
+            <h2 style="padding: 0 0 4px 0;" id="tag-edit-title">{'New <%tag_name> tag'|i18n('design/standard/ezoe', '', hash( '%tag_name', $tag_name ))|wash('xhtml')}</h2>
         </div>
         {def $cell_tag_list = hash('td', 'Table cell'|i18n('design/standard/ezoe'), 'th', 'Table header'|i18n('design/standard/ezoe'))}
 
