@@ -770,6 +770,14 @@ Vil du vite mer om dette?</translation>
         <source>Invalid parameter: %parameter = %value</source>
         <translation>Ugyldig parameter: %parameter = %value</translation>
     </message>
+    <message>
+        <source>New <%tag_name> tag</source>
+        <translation>Ny <%tag_name> tagg</translation>
+    </message>
+    <message>
+        <source>Edit <%tag_name> tag</source>
+        <translation>Rediger <%tag_name> tagg</translation>
+    </message>
 </context>
 <context>
     <name>design/standard/ezoe/searchreplace</name>
